--- a/pages/home.page.html
+++ b/pages/home.page.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/scripts/home.js" defer></script>
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/home.css">
+    <script src="../scripts/home.js" defer></script>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Trang chủ</title>
 </head>
@@ -18,10 +18,10 @@
             <input type=" search" placeholder="Tìm kiếm ....">
         </div>
         <nav>
-            <a href="/pages/home.page.html" class="active">
+            <a href="home.page.html" class="active">
                 <i class="fa-solid fa-house"></i>
             </a>
-            <a href="/pages/cart.page.html">
+            <a href="cart.page.html">
                 <i class="fa-solid fa-cart-shopping"></i>
             </a>  
         </nav>
@@ -31,7 +31,7 @@
     <span class="close">&times;</span>
     <div class="form-container">
       <div class="form-icon">
-        <img src="/imagines/1.ong.PNG" alt="User Icon">
+        <img src="../imagines/1.ong.PNG" alt="User Icon">
       </div>
       <form id="loginForm">
         <input type="text" id="loginUsername" placeholder="username" required>
