--- a/pages/cart.page.html
+++ b/pages/cart.page.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/scripts/cart.js" defer></script>
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/cart.css" />
+    <script src="../scripts/cart.js" defer></script>
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/cart.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -23,10 +23,10 @@
         <input type=" search" placeholder="Tìm kiếm ...." />
       </div>
       <nav>
-        <a href="/pages/home.page.html" class="active">
+        <a href="home.page.html" class="active">
           <i class="fa-solid fa-house"></i>
         </a>
-        <a href="/pages/cart.page.html">
+        <a href="cart.page.html">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </nav>
@@ -40,7 +40,7 @@
         <div class="cart-sumlabel">Tổng số tiền:</div>
         <span id="cost" class="cart-sumvalue"></span>
 
-        <a href="/pages/checkout.html" class="cart-sumCheckout"> Thanh Toán</a>
+        <a href="checkout.html" class="cart-sumCheckout"> Thanh Toán</a>
       </div>
     </main>
   </body>
