--- a/pages/home.page.html
+++ b/pages/home.page.html
@@ -51,7 +51,7 @@
     <span class="close">&times;</span>
     <div class="form-container">
       <div class="form-icon">
-        <img src="/imagines/1.ong.PNG" alt="User Icon">
+        <img src="../imagines/1.ong.PNG" alt="User Icon">
       </div>
       <form id="registerForm">
         <input type="text" id="registerUsername" placeholder="username" required>
@@ -73,35 +73,35 @@
 <div class="slideshow-container">
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <img src="/imagines/banner/slide1.jpg" style="width:100%">
+      <img src="../imagines/banner/slide1.jpg" style="width:100%">
     </div>
   
     <div class="mySlides fade">
-      <img src="/imagines/banner/slide2.jpg" style="width:100%">
+      <img src="../imagines/banner/slide2.jpg" style="width:100%">
     </div>
   
     <div class="mySlides fade">
-      <img src="/imagines/banner/slide3.jpg" style="width:100%">
+      <img src="../imagines/banner/slide3.jpg" style="width:100%">
     </div>
   
       <div class="mySlides fade">
-        <img src="/imagines/banner/slide4.jpg" style="width:100%">
+        <img src="../imagines/banner/slide4.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="/imagines/banner/slide5.jpg" style="width:100%">
+        <img src="../imagines/banner/slide5.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="/imagines/banner/slide6.jpg" style="width:100%">
+        <img src="../imagines/banner/slide6.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="/imagines/banner/slide7.jpg" style="width:100%">
+        <img src="../imagines/banner/slide7.jpg" style="width:100%">
       </div>
 
       <div class="mySlides fade">
-        <img src="/imagines/banner/slide8.jpg" style="width:100%">
+        <img src="../imagines/banner/slide8.jpg" style="width:100%">
        </div>
        
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -127,32 +127,32 @@
         <div class="section__heading">Loại sản phẩm</div>
             <div class="section__typelist">
                 <div class="section__typeitem" type="all">
-                <img src="/imagines/all.jpg" alt="">
+                <img src="../imagines/all.jpg" alt="">
                 <p>Tất cả</p>
             </div>
 
             <div class="section__typeitem" type="ai">
-                <img src="/imagines/lap-ai.jpg" alt="">
+                <img src="../imagines/lap-ai.jpg" alt="">
                 <p>AI</p>
             </div>
 
             <div class="section__typeitem" type="ga">
-                <img src="/imagines/lap-gaming.jpg" alt="">
+                <img src="../imagines/lap-gaming.jpg" alt="">
                 <p>Gaming- Đồ Họa</p>
             </div>
 
             <div class="section__typeitem" type="sv">
-                <img src="/imagines/lap-vp.jpg" alt="">
+                <img src="../imagines/lap-vp.jpg" alt="">
                 <p> Văn Phòng-Sinh viên</p>
             </div>
 
             <div class="section__typeitem" type="dn">
-                <img src="/imagines/lap-doanh.jpg" alt="">
+                <img src="../imagines/lap-doanh.jpg" alt="">
                 <p>Doanh Nhân</p>
             </div>
 
             <div class="section__typeitem" type="mn">
-                <img src="/imagines/lap-mong.jpg" alt="">
+                <img src="../imagines/lap-mong.jpg" alt="">
                 <p>Mỏng Nhẹ</p>
             </div>    
         </div>
@@ -163,7 +163,7 @@
             <div class="section__productlist">
                 <div class="section__card" type="ai">
                     <div class="section__img">
-                        <img src="/imagines/ai1.png" alt="">
+                        <img src="../imagines/ai1.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook 14
@@ -189,7 +189,7 @@
 
                 <div class="section__card" type="ai">
                     <div class="section__img">
-                        <img src="/imagines/ai2.png" alt="">
+                        <img src="../imagines/ai2.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Lenovo Gaming LOQ
@@ -214,7 +214,7 @@
                 </div>
                 <div class="section__card" type="ai">
                     <div class="section__img">
-                        <img src="/imagines/ai3.png" alt="">
+                        <img src="../imagines/ai3.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook 16
@@ -241,7 +241,7 @@
 
                 <div class="section__card" type="ai">
                     <div class="section__img">
-                        <img src="/imagines/ai5.png" alt="">
+                        <img src="../imagines/ai5.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook S16
@@ -267,7 +267,7 @@
 
                 <div class="section__card" type="ga">
                     <div class="section__img">
-                        <img src="/imagines/ga1.png" alt="">
+                        <img src="../imagines/ga1.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus TUF Gaming A15
@@ -293,7 +293,7 @@
                 
                 <div class="section__card" type="ga">
                     <div class="section__img">
-                        <img src="/imagines/ga2.png" alt="">
+                        <img src="../imagines/ga2.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Lenovo Gaming LOQ
@@ -319,7 +319,7 @@
 
                 <div class="section__card" type="ga">
                     <div class="section__img">
-                        <img src="/imagines/ga3.png" alt="">
+                        <img src="../imagines/ga3.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop MSI Gaming Katana 15
@@ -345,7 +345,7 @@
 
                 <div class="section__card" type="ga">
                     <div class="section__img">
-                        <img src="/imagines/ga4.png" alt="">
+                        <img src="../imagines/ga4.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop MSI Gaming Thin A15
@@ -371,7 +371,7 @@
 
                 <div class="section__card" type="ga">
                     <div class="section__img">
-                        <img src="/imagines/ga5.png" alt="">
+                        <img src="../imagines/ga5.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Gaming Vivobook
@@ -397,7 +397,7 @@
 
                 <div class="section__card"  type="sv">
                     <div class="section__img">
-                        <img src="/imagines/sv1.png" alt="">
+                        <img src="../imagines/sv1.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop HP 14s
@@ -423,7 +423,7 @@
 
                 <div class="section__card" type="sv">
                     <div class="section__img">
-                        <img src="/imagines/sv2.png" alt="">
+                        <img src="../imagines/sv2.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop HP 245 G10
@@ -449,7 +449,7 @@
 
                 <div class="section__card" type="sv">
                     <div class="section__img">
-                        <img src="/imagines/sv3.png" alt="">
+                        <img src="../imagines/sv3.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Dell Inspiron
@@ -475,7 +475,7 @@
 
                 <div class="section__card" type="sv">
                     <div class="section__img">
-                        <img src="/imagines/sv4.png" alt="">
+                        <img src="../imagines/sv4.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Acer Aspire Lite 15
@@ -501,7 +501,7 @@
 
                 <div class="section__card" type="sv">
                     <div class="section__img">
-                        <img src="/imagines/sv5.png" alt="">
+                        <img src="../imagines/sv5.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Acer Aspire Lite
@@ -527,7 +527,7 @@
 
                 <div class="section__card" type="mn">
                     <div class="section__img">
-                        <img src="/imagines/mn1.png" alt="">
+                        <img src="../imagines/mn1.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop HP Pavilion 15
@@ -553,7 +553,7 @@
 
                 <div class="section__card" type="mn">
                     <div class="section__img">
-                        <img src="/imagines/mn2.png" alt="">
+                        <img src="../imagines/mn2.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook 15 
@@ -579,7 +579,7 @@
 
                 <div class="section__card" type="mn">
                     <div class="section__img">
-                        <img src="/imagines/mn3.png" alt="">
+                        <img src="../imagines/mn3.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook 14
@@ -605,7 +605,7 @@
 
                 <div class="section__card" type="mn">
                     <div class="section__img">
-                        <img src="/imagines/mn4.png" alt="">
+                        <img src="../imagines/mn4.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook
@@ -631,7 +631,7 @@
 
                 <div class="section__card" type="mn">
                     <div class="section__img">
-                        <img src="/imagines/mn5.png" alt="">
+                        <img src="../imagines/mn5.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Lenovo IdeaPad Slim 5
@@ -657,7 +657,7 @@
 
                 <div class="section__card" type="dn">
                     <div class="section__img">
-                        <img src="/imagines/dn1.png" alt="">
+                        <img src="../imagines/dn1.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop HP Pavilion 15
@@ -683,7 +683,7 @@
 
                 <div class="section__card" type="dn">
                     <div class="section__img">
-                        <img src="/imagines/dn2.png" alt="">
+                        <img src="../imagines/dn2.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop HP ProBook 450
@@ -709,7 +709,7 @@
 
                 <div class="section__card" type="dn">
                     <div class="section__img">
-                        <img src="/imagines/dn3.png" alt="">
+                        <img src="../imagines/dn3.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Lenovo IdeaPad Slim 5
@@ -735,7 +735,7 @@
 
                 <div class="section__card" type="dn">
                     <div class="section__img">
-                        <img src="/imagines/dn4.png" alt="">
+                        <img src="../imagines/dn4.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Asus Vivobook S 14
@@ -761,7 +761,7 @@
 
                 <div class="section__card" type="dn">
                     <div class="section__img">
-                        <img src="/imagines/dn5.png" alt="">
+                        <img src="../imagines/dn5.png" alt="">
                     </div>
                     <div class="section__name">
                         Laptop Lenovo IdeaPad Slim 5
