--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -2,9 +2,9 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <script src="/scripts/checkout.js" defer></script>
-    <link rel="stylesheet" href="/styles/checkout.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <script src="../scripts/checkout.js" defer></script>
+    <link rel="stylesheet" href="../styles/checkout.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanh Toán Đơn Hàng</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSB7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,10 +14,10 @@
     <header>
         <h2>Lap Store <i class="fa-solid fa-laptop"></i></h2>
         <nav>
-           <a href="/pages/home.page.html" class="active">
+           <a href="home.page.html" class="active">
                 <i class="fa-solid fa-house"></i>
             </a>
-            <a href="/pages/cart.page.html">
+            <a href="cart.page.html">
                 <i class="fa-solid fa-cart-shopping"></i>
             </a>  
         </nav>
