--- a/pages/thankyou.page.html
+++ b/pages/thankyou.page.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cảm Ơn Bạn</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f5f5f5; }
-        h1 { color: #ee4d2d; }
-        p { font-size: 16px; color: #333; }
-        a { color: #007bff; text-decoration: none; }
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 50px;
+        background-color: #f5f5f5;
+      }
+      h1 {
+        color: #ee4d2d;
+      }
+      p {
+        font-size: 16px;
+        color: #333;
+      }
+      a {
+        color: #007bff;
+        text-decoration: none;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Cảm Ơn Bạn Đã Đặt Hàng!</h1>
-    <p>Đơn hàng của bạn đã được ghi nhận. Chúng tôi sẽ liên hệ với bạn sớm nhất.</p>
-    <p><a href="/pages/home.page.html">Quay lại trang chủ</a></p>
-</body>
+    <p>
+      Đơn hàng của bạn đã được ghi nhận. Chúng tôi sẽ liên hệ với bạn sớm nhất.
+    </p>
+    <p><a href="home.page.html">Quay lại trang chủ</a></p>
+  </body>
 </html>
